Fixed portfolio meta and tags on narrow widths

--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ nav a.active {
 }
 
 .minor-project .portfolio-excerpt {
-    font-size: 0.75rem;
+    font-size: 0.7em;
 }
 
 .portfolio-preview-wrap {
@@ -92,8 +92,8 @@ nav a.active {
 
 .project-meta-absolute {
     position: absolute;
-    left: 1rem;
-    bottom: 1rem;
+    left: 1em;
+    bottom: 1em;
     text-shadow: black 0 0 3px;
 }
 
@@ -105,12 +105,16 @@ nav a.active {
 .project-meta-absolute h3 {
     color: white;
     font-size: 1.75em;
+    margin-bottom: 0.5em;
 }
 
 .portfolio-tag {
     color: white;
-    border-radius: 0.75rem;
-    padding: 0.2rem 0.75rem;
+    border-radius: 0.75em;
+    padding: 0.2em 0.75em;
+    white-space: nowrap;
+    margin-top: 0.2em;
+    display: inline-block;
 }
 
 .professional-tag { background-color: #ba9a5b }
